syntax = "proto3";

package pl.services;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "src/api/public/uuidpb/uuid.proto";


option go_package = "pixielabs.ai/pixielabs/src/cloud/dnsmgr/proto;dnsmgr";

// DNSMgrService tracks DNS information for clusters.
service DNSMgrService {
    rpc GetDNSAddress(GetDNSAddressRequest) returns (GetDNSAddressResponse) {}
    rpc GetSSLCerts(GetSSLCertsRequest) returns (GetSSLCertsResponse) {}
}

message GetDNSAddressRequest {
   pl.uuidpb.UUID cluster_id = 1 [
                                 (gogoproto.customname) = "ClusterID"
                                 ];
   string ip_address = 2 [
                         (gogoproto.customname) = "IPAddress"
                         ];
}

message GetDNSAddressResponse {
  string dns_address = 1 [
                         (gogoproto.customname) = "DNSAddress"
                         ];
}

message GetSSLCertsRequest {
  uuidpb.UUID cluster_id = 1 [
                              (gogoproto.customname) = "ClusterID"
                             ];
}

message GetSSLCertsResponse {
  string key = 1;
  string cert = 2;
}
